--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@quarterto/heroku-version-infer": "^4.0.1",
     "@quarterto/package-version-github-release": "^1.2.0",
     "@quarterto/remove-array-index": "^1.0.0",
+    "@quarterto/request-fullscreen": "^1.0.0",
     "@quarterto/short-id": "^1.0.0",
     "@quarterto/update-path": "^1.5.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-runtime": "^6.20.0",
+    "boulevard": "^2.3.5",
     "contrast": "^1.0.1",
     "meteor-node-stubs": "~0.2.4",
     "odreian-date": "^2.1.3",
